fix product ingredient field stretching

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,9 +32,9 @@ body {
 .page-container {
   display: grid;
   grid-template-areas:
-      "main-header main-header"
-      "main-nav page__content"
-      "cart page__content";
+    "main-header main-header"
+    "main-nav page__content"
+    "cart page__content";
   grid-template-columns: 1fr 85%;
   grid-template-rows: auto auto 1fr;
   padding: 2rem 1rem;
@@ -117,10 +117,12 @@ body {
 /* Product card */
 
 .product-catalogue__list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 60px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: center;
+  row-gap: 60px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .product-card {
@@ -129,7 +131,6 @@ body {
   align-items: center;
   justify-content: start;
   width: 205px;
-  height: fit-content;
   gap: 0.7rem;
 }
 
@@ -147,11 +148,11 @@ body {
 
 .product-card-info {
   display: flex;
-  flex-basis: 100%;
   flex-direction: column;
   align-items: center;
   text-align: center;
   width: 100%;
+  height: 100%;
 }
 
 .product-card__photo {
@@ -159,21 +160,23 @@ body {
   align-items: center;
   justify-content: center;
   width: 180px;
-  height: 180px;
+  min-height: 180px;
   background-color: var(--yellow);
   border-radius: 50%;
 }
 
 .product-card-info__ingredients {
+  flex-grow: 1;
   width: 100%;
   padding: 0.4rem 0 0.6rem;
   border-top: var(--dark-gray) solid 3px;
   border-bottom: var(--dark-gray) solid 3px;
-  font-size: 0.9rem;
-  font-weight: 700;
 }
 
 .product-ingredient {
+  font-size: 0.9rem;
+  line-height: 1.2rem;
+  font-weight: 700;
   color: var(--blue);
   border-bottom: var(--blue) solid 1px;
 }
@@ -280,7 +283,7 @@ product-count-input[type=number] {
 .cart-logo {
   margin-top: auto;
   display: inline-block;
-  width: 77px; 
+  width: 77px;
   height: 50px;
 }
 
@@ -352,7 +355,7 @@ product-count-input[type=number] {
   background-color: #f5c300;
 }
 
-.button-primary--grey{
+.button-primary--grey {
   background-color: #807979;
 }
 
